# django_homework

./: .env.sample  Dockerfile  docker-compose.yml  products_data.json  pyproject.toml
blog/: views.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixture/: categories_data.json
catalog/management/commands/: load_data.py
catalog/migrations/: 0002_alter_category_options.py  0002_product_manufactured_at.py  0003_version.py  0004_product_owner.py  0005_product_is_active.py
catalog/templates/: base.html  product_list.html  products_detail.html
catalog/templates/catalog/: base.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: change_password.html  user_form.html
