[tool.poetry]
name = "pythonproject9"
version = "0.1.0"
description = ""
authors = ["Natalia Bazhina <nataliaagapova27@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
black = "^24.8.0"
ipython = "^8.27.0"
pytils = "^0.4.1"
django = "4.2.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
